--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ async-openai = { version = "^0.10" }
 tokio = { version = "^1.27", features = ["macros"] }
 serde_json = { version = "~1.0" }
 serde = { version = "~1.0", features = ["derive"] }
+strum = "^0.26"
+strum_macros = "^0.26"
 roxmltree = { version = "~0.18" }
 reqwest = { version = "~0.11" }
 clap = { version = "4.2.1", features = ["string"] }
